// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextLogo > applies dark variant correctly 1`] = `
<span
  class="font-black tracking-tight leading-none "
>
  <span
    class="text-white"
  >
    Hound
  </span>
  <span
    class="font-bold text-white/80"
  >
     Shield
  </span>
</span>
`;

exports[`TextLogo > applies light variant correctly 1`] = `
<span
  class="font-black tracking-tight leading-none "
>
  <span
    class="text-[#1A3347]"
  >
    Hound
  </span>
  <span
    class="font-bold text-slate-600"
  >
     Shield
  </span>
</span>
`;
